@@ -1,4 +1,4 @@
-[cert-is - v1.0.1](../README.md) › [Globals](../globals.md) › [cert-is](../modules/cert_is.md) › [Checker](cert_is.checker.md)
+[cert-is - v1.0.2](../../README.md) › [Globals](../../README.md) › [cert-is](../../README.md) › [Checker](cert_is.checker.md)
 
 # Class: Checker
 
@@ -37,11 +37,11 @@ if the test throws an error. All values must pass the supplied tests.
 
 ## Constructors
 
-###  constructor
+### constructor
 
 \+ **new Checker**(...`values`: any): *[Checker](cert_is.checker.md)*
 
-*Defined in [src/checker.ts:127](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L127)*
+*Defined in [src/checker.ts:127](src/checker.ts#L127)*
 
 **Parameters:**
 
@@ -53,11 +53,11 @@ Name | Type |
 
 ## Properties
 
-###  is
+### is
 
 • **is**: *function*
 
-*Defined in [src/checker.ts:44](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L44)*
+*Defined in [src/checker.ts:44](src/checker.ts#L44)*
 
 Certifies that ALL elements of `values` are strictly equal to any element
 of `allowed`. Returns false if ANY element of `values` is NOT strictly
@@ -79,11 +79,11 @@ Name | Type |
 
 ___
 
-###  isGT
+### isGT
 
 • **isGT**: *function*
 
-*Defined in [src/checker.ts:92](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L92)*
+*Defined in [src/checker.ts:92](src/checker.ts#L92)*
 
 Certifies that ALL elements of `values` are greater than a provided lower
 bound. Returns false if any element of `values` is NOT greater than the
@@ -106,11 +106,11 @@ Name | Type |
 
 ___
 
-###  isGTE
+### isGTE
 
 • **isGTE**: *function*
 
-*Defined in [src/checker.ts:104](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L104)*
+*Defined in [src/checker.ts:104](src/checker.ts#L104)*
 
 Certifies that ALL elements of `values` are greater than or equal to a
 provided lower bound. Returns false if any element of `values` is NOT
@@ -134,11 +134,11 @@ Name | Type |
 
 ___
 
-###  isLT
+### isLT
 
 • **isLT**: *function*
 
-*Defined in [src/checker.ts:115](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L115)*
+*Defined in [src/checker.ts:115](src/checker.ts#L115)*
 
 Certifies that ALL elements of `values` are less than a provided upper
 bound. Returns false if any element of `values` is NOT less than the
@@ -161,11 +161,11 @@ Name | Type |
 
 ___
 
-###  isLTE
+### isLTE
 
 • **isLTE**: *function*
 
-*Defined in [src/checker.ts:127](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L127)*
+*Defined in [src/checker.ts:127](src/checker.ts#L127)*
 
 Certifies that ALL elements of `values` are less than or equal to a
 provided upper bound. Returns false if any element of `values` is NOT
@@ -189,11 +189,11 @@ Name | Type |
 
 ___
 
-###  isNot
+### isNot
 
 • **isNot**: *function*
 
-*Defined in [src/checker.ts:54](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L54)*
+*Defined in [src/checker.ts:54](src/checker.ts#L54)*
 
 Certifies that All elements of `values` are not strictly equal to any
 element of `invalid`. Returns false if the ANY element of `values` IS
@@ -215,11 +215,11 @@ Name | Type |
 
 ___
 
-###  isNotType
+### isNotType
 
 • **isNotType**: *function*
 
-*Defined in [src/checker.ts:79](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L79)*
+*Defined in [src/checker.ts:79](src/checker.ts#L79)*
 
 Certified that All elements of `values` DO NOT match any type in
 `invalidTypes`. Returns false if the type of any element of `values` IS
@@ -233,21 +233,21 @@ types.
 
 #### Type declaration:
 
-▸ (...`invalidTypes`: Array‹string | [AnyConstructorFunction](../modules/cert_is.md#anyconstructorfunction)›): *[Checker](cert_is.checker.md) | false*
+▸ (...`invalidTypes`: Array‹string | [AnyConstructorFunction](../../README.md#anyconstructorfunction)›): *[Checker](cert_is.checker.md) | false*
 
 **Parameters:**
 
 Name | Type |
 ------ | ------ |
-`...invalidTypes` | Array‹string &#124; [AnyConstructorFunction](../modules/cert_is.md#anyconstructorfunction)› |
+`...invalidTypes` | Array‹string &#124; [AnyConstructorFunction](../../README.md#anyconstructorfunction)› |
 
 ___
 
-###  isType
+### isType
 
 • **isType**: *function*
 
-*Defined in [src/checker.ts:65](https://github.com/jpcx/cert-is/blob/09879b3/src/checker.ts#L65)*
+*Defined in [src/checker.ts:65](src/checker.ts#L65)*
 
 Certifies that ALL elements of `values` match any type in `validTypes`.
 Returns false if the type of any element of `values` is NOT strictly
@@ -260,10 +260,10 @@ equal to any valid type. If a given type is a string, checks using
 
 #### Type declaration:
 
-▸ (...`validTypes`: Array‹string | [AnyConstructorFunction](../modules/cert_is.md#anyconstructorfunction)›): *[Checker](cert_is.checker.md) | false*
+▸ (...`validTypes`: Array‹string | [AnyConstructorFunction](../../README.md#anyconstructorfunction)›): *[Checker](cert_is.checker.md) | false*
 
 **Parameters:**
 
 Name | Type |
 ------ | ------ |
-`...validTypes` | Array‹string &#124; [AnyConstructorFunction](../modules/cert_is.md#anyconstructorfunction)› |
+`...validTypes` | Array‹string &#124; [AnyConstructorFunction](../../README.md#anyconstructorfunction)› |
