@@ -1,4 +1,4 @@
-[cert-is - v1.0.1](../README.md) › [Globals](../globals.md) › [cert-is](../modules/cert_is.md) › [ValueArgumentError](cert_is.valueargumenterror.md)
+[cert-is - v1.0.2](../../README.md) › [Globals](../../README.md) › [cert-is](../../README.md) › [ValueArgumentError](cert_is.valueargumenterror.md)
 
 # Class: ValueArgumentError
 
@@ -60,11 +60,11 @@ e.valid   // ['bar']
 
 ## Constructors
 
-###  constructor
+### constructor
 
 \+ **new ValueArgumentError**(`paramName`: string, ...`valid`: any): *[ValueArgumentError](cert_is.valueargumenterror.md)*
 
-*Defined in [src/errors/valueArgumentError.ts:40](https://github.com/jpcx/cert-is/blob/09879b3/src/errors/valueArgumentError.ts#L40)*
+*Defined in [src/errors/valueArgumentError.ts:40](src/errors/valueArgumentError.ts#L40)*
 
 **Parameters:**
 
@@ -77,31 +77,27 @@ Name | Type |
 
 ## Properties
 
-###  code
+### code
 
 • **code**: *string*
 
-*Defined in [src/errors/valueArgumentError.ts:39](https://github.com/jpcx/cert-is/blob/09879b3/src/errors/valueArgumentError.ts#L39)*
+*Defined in [src/errors/valueArgumentError.ts:39](src/errors/valueArgumentError.ts#L39)*
 
 ___
 
-###  message
+### message
 
 • **message**: *string*
 
 *Inherited from void*
 
-Defined in node_modules/typescript/lib/lib.es5.d.ts:974
-
 ___
 
-###  name
+### name
 
 • **name**: *string*
 
 *Inherited from void*
-
-Defined in node_modules/typescript/lib/lib.es5.d.ts:973
 
 ___
 
@@ -113,15 +109,13 @@ ___
 
 *Overrides void*
 
-Defined in node_modules/typescript/lib/lib.es5.d.ts:975
-
 ___
 
 ### `Optional` valid
 
 • **valid**? : *any*
 
-*Defined in [src/errors/valueArgumentError.ts:40](https://github.com/jpcx/cert-is/blob/09879b3/src/errors/valueArgumentError.ts#L40)*
+*Defined in [src/errors/valueArgumentError.ts:40](src/errors/valueArgumentError.ts#L40)*
 
 ___
 
@@ -129,4 +123,3 @@ ___
 
 ▪ **Error**: *ErrorConstructor*
 
-Defined in node_modules/typescript/lib/lib.es5.d.ts:984
